--- a/css/style.css
+++ b/css/style.css
@@ -329,5 +329,73 @@ header img[alt=logo-black] {
 
 
 /* FOOTER */
+footer {
+    background-color: black;
+    padding-top: 70px;
+}
 
+footer hr {
+    width: 80%;
+    margin: 20px auto;
+    color: rgba(170, 168, 168, 0.548);
+}
+
+footer h6 {
+    font-size: 15px;
+    color: white;
+}
+
+footer .menu li {
+    display: block;
+    margin: 10px 0;
+}
+
+footer .menu a {
+    color: grey;
+    font-size: 14px;
+}
+
+footer .social-icons a {
+    color: white;
+    font-size: 20px;
+    padding: 0 5px;
+}
+
+footer span {
+    color: white;
+    font-size: 13px;
+}
+
+footer .col-lg-12 {
+    padding: 30px;
+    text-align: center;
+}
+
+.legal-pages {
+    border-top: 1px solid rgba(211, 211, 211, 0.205);
+    border-bottom: 1px solid rgba(211, 211, 211, 0.205);
+    padding: 30px 0;
+    margin-top: 30px;
+}
+
+@media all and (max-width: 991px) {
+    img[alt="helbiz-logo-white"] {
+        padding-left: 10px;
+        padding-bottom: 20px;
+    }
+
+    footer {
+        margin-top: 900px;
+        padding-top: 20px;
+    }
+
+    .social-icons {
+        text-align: center;
+        padding-bottom: 15px;
+    }
+
+    footer .col-lg-12 {
+        padding: 0;
+    }
+}
 /* END FOOTER */
